--- a/set goals/index.html
+++ b/set goals/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <section class = "goalbody">
 <h1>Set your Goals</h1>
@@ -10,7 +10,7 @@
   <div class="popup">.
     
 
-<body>
+
   <div class="container">
     <div class="row">
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
