to accept change

--- a/set goals/index.html
+++ b/set goals/index.html
@@ -7,7 +7,7 @@
 <button   onclick="openForm()"> set goals</button>
 
 <div id="popup1" class="overlay">
-  <div class="popup">.
+  <div class="popup">
     <div class="container">
     <div class="row">
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
@@ -37,10 +37,12 @@
       </div>
     </div>
   </div>
-</body>
+
 </div>
 </div>
 </section>
+</div>
+</body>
 <script type="text/javascript">
   function closeForm(){
     document.getElementById("popup1").style.display = "none";
