--- a/set goals/index.html
+++ b/set goals/index.html
@@ -1,13 +1,13 @@
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<section class = "goalbody">
-<h1>Set your Goals</h1>
-<div class="box">
-<button  onclick="openForm()"> <a href="#popup1">set goals</a></button>
-</div>
-<div id="popup1" class="overlay">
-  <div class="popup">
+ </head>
+ <section class = "goalbody">
+ <h1>Set your Goals</h1>
+ <div class="box">
+ <button  onclick="openForm()"> <a href="#popup1">set goals</a></button>
+ </div>
+ <div id="popup1" class="overlay">
+  <div class="popup">.
     <div class="container">
     <div class="row">
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
@@ -19,12 +19,10 @@
                 <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
                 <label for="inputEmail">Expenses Goal </label>
               </div>
-
               <div class="form-label-group">
                 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
                 <label for="inputPassword">Saving goal</label>
               </div>
- 
               <div class="custom-control custom-checkbox mb-3">
                 <input type="checkbox" class="custom-control-input" id="customCheck1">
                 <button  position="left">Edit</button>
@@ -37,17 +35,15 @@
       </div>
     </div>
   </div>
-
-</div>
-</div>
-</section>
-</div>
-</body>
-<script type="text/javascript">
+ </body>
+ </div>
+ </div>
+ </section>
+ <script type="text/javascript">
   function closeForm(){
     document.getElementById("popup1").style.display = "none";
   }
   function openForm(){
     document.getElementById("popup1").style.display = "block";
   }
-</script>
+ </script>
